@@ -4,6 +4,7 @@ wiLink 1.0.3 (UNRELEASED)
  * Rooms:
    - Correctly parse multiple "status" elements in presences.
    - Fix tab completion with a leading "@" sign on OS X.
+   - Do not steal focus when auto-joining rooms.
  * Shares:
    - Fix display of shared drives on Windows.
    - Do not re-send registration every minute.
